# AOD-PM-Estimation-INSAT-MERRA2

./: .gitignore  DASHBOARD_README.md  LOCALHOST.md  QUICKSTART_DASHBOARD.md  QUICK_START_REAL_DATA.md  README.md  REAL_DATA_INTEGRATION_GUIDE.md  SYSTEM_OVERVIEW.md  app_dashboard.py  openaq_location_6978_measurments.csv  pyproject.toml  run_dashboard.sh
artifacts/baseline/: metrics.json  random_forest_pm25.joblib
artifacts/greater_noida/: metrics.json
configs/: base.yaml
scripts/: client.py  fetch_merra2_opendap.py  fetch_realdata_openaq.py  process_greater_noida.py  run_server.py  train_and_evaluate.py
src/airpollution/: __init__.py  app.py  config.py  data.py  evaluation.py  join.py  modeling.py  pipeline.py  schemas.py
src/airpollution/sources/: __init__.py  base.py  cpcb.py  insat.py  merra2.py
src/airpollution_india.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_config.py  test_data.py  test_evaluation.py  test_join.py  test_pipeline.py  test_sources.py
