[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "airpollution-india"
version = "0.1.0"
description = "Satellite + AI/ML pipeline for PM estimation"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "HP Challenge Team" }]
dependencies = [
  "numpy>=1.25",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "scipy>=1.10",
  "pyyaml>=6.0",
  "joblib>=1.3",
  "fastapi>=0.104",
  "uvicorn[standard]>=0.24",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.5",
  "mypy>=1.8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
